[package]
name = "podo-std-eye"
version = "0.1.1"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
opencv = { version = "0.38", features = ["contrib"] }
podo-core-driver = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simple-socket = { path = "../socket" }

[dev-dependencies]
bincode = "1.2"
