[package]
name = "podo-std-eye-driver"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
podo-core-driver = "0.4"
podo-std-eye = { path = ".." }

[lib]
crate-type = ["cdylib"]
